Plot in the same colors as in the T2T paper.

--- a/vignettes/OxfordPlots.Rmd
+++ b/vignettes/OxfordPlots.Rmd
@@ -102,7 +102,10 @@ to demonstrate that it is visually similar to the one above made on mapped
 regions (object after coalescing).
 
 ```{r Oki_Osa_gbs}
-makeOxfordPlots(gbs$Oki_Osa, diag = FALSE) + theme_bw() + theme(legend.position="none")
+makeOxfordPlots(gbs$Oki_Osa, diag = FALSE) +
+  scale_color_manual(values = c("#E78CC4", "#B2D659", "#FFDA39", "#8EA2C6", "#69BEA4")) +
+  theme_bw() +
+  theme(legend.position="none")
 ```
 
 Oxford plot colored by strand.
