Update colors following Sasha's input.

--- a/vignettes/OxfordPlots.Rmd
+++ b/vignettes/OxfordPlots.Rmd
@@ -103,7 +103,7 @@ regions (object after coalescing).
 
 ```{r Oki_Osa_gbs}
 makeOxfordPlots(gbs$Oki_Osa, diag = FALSE) +
-  scale_color_manual(values = c("#E78CC4", "#B2D659", "#FFDA39", "#8EA2C6", "#69BEA4")) +
+  scale_color_manual(values = c("#E78AC3", "#A6D854", "#FFD92F", "#8DA0CB", "#66C2A5")) +
   theme_bw() +
   theme(legend.position="none")
 ```
