--- a/vignettes/OxfordPlots.Rmd
+++ b/vignettes/OxfordPlots.Rmd
@@ -101,7 +101,7 @@ The plot below is based on aligned regions (before coalescing).  It is displayed
 to demonstrate that it is visually similar to the one above made on mapped
 regions (object after coalescing).
 
-```{r Oki_Osa_gbs}
+```{r Oki_Osa_gbs, dev=c('png', 'svg', 'pdf'), fig.ext=c('png', 'svg', 'pdf')}
 makeOxfordPlots(gbs$Oki_Osa, diag = FALSE) +
   scale_color_manual(values = c("#E78AC3", "#A6D854", "#FFD92F", "#8DA0CB", "#66C2A5")) +
   theme_bw() +
